--- a/index.html
+++ b/index.html
@@ -6,32 +6,34 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <header>Animals Search</header>
     <div id="buttons">
-        <button type="button" class="btn btn-outline" data-name="Cat">Cat</button>
-        <button type="button" class="btn btn-outline" data-name="Dog">Dog</button>
-        <button type="button" class="btn btn-outline" data-name="Panda">Panda</button>
-        <button type="button" class="btn btn-outline" data-name="Seal">Seal</button>
-        <button type="button" class="btn btn-outline" data-name="Squirrel">Squirrel</button>
-        <button type="button" class="btn btn-outline" data-name="Arctic Fox">Arctic Fox</button>
-        <button type="button" class="btn btn-outline" data-name="Koala">Koala</button>
-        <button type="button" class="btn btn-outline" data-name="Ratel">Ratel</button>
-        <button type="button" class="btn btn-outline" data-name="Parrot">Parrot</button>
-        <button type="button" class="btn btn-outline" data-name="Alpaca">Alpaca</button>
-        <button type="button" class="btn btn-outline" data-name="Penguin">Penguin</button>
-        <button type="button" class="btn btn-outline" data-name="Sea Otter">Sea Otter</button>
+        <!-- <button type="button" class="btn btn-info" data-name="Cat">Cat</button>
+        <button type="button" class="btn btn-info" data-name="Dog">Dog</button>
+        <button type="button" class="btn btn-info" data-name="Panda">Panda</button>
+        <button type="button" class="btn btn-info" data-name="Seal">Seal</button>
+        <button type="button" class="btn btn-info" data-name="Squirrel">Squirrel</button>
+        <button type="button" class="btn btn-info" data-name="Arctic Fox">Arctic Fox</button>
+        <button type="button" class="btn btn-info" data-name="Koala">Koala</button>
+        <button type="button" class="btn btn-info" data-name="Ratel">Ratel</button>
+        <button type="button" class="btn btn-info" data-name="Parrot">Parrot</button>
+        <button type="button" class="btn btn-info" data-name="Alpaca">Alpaca</button>
+        <button type="button" class="btn btn-info" data-name="Penguin">Penguin</button>
+        <button type="button" class="btn btn-info" data-name="Sea Otter">Sea Otter</button> -->
     </div>
 
-    <form>
+    <div class=container style="max-width: 28rem;">
         <div class="form-group">
           <label>Add an animal</label>
           <input class="form-control" id="exampleInput">
         </div>
 
-        <button class="btn btn-primary" id="submit">Submit</button>
-      </form>
+        <button class="btn btn-info" id="submit">Submit</button>
+    </div>
 
     <div id="gifs"></div>
-
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="assets/logic.js"></script>
 </body>
